Fix gallery box alignment issue if embedded on forum

--- a/themes/default/css/galleries.css
+++ b/themes/default/css/galleries.css
@@ -74,7 +74,7 @@
 	overflow: hidden;
 
 	/* Fiddle it so our grid cells will be flush with the left */
-	margin-left: -0.5em;
+	margin-left: -0.4em;
 	width: 100%;
 }
 
